--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'Merri';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(../public/assets/fonts/Merriweather-Regular.ttf) format('woff2');
+  }
+}
