--- a/web/src/index.css
+++ b/web/src/index.css
@@ -8,6 +8,6 @@
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url(../assets/fonts/Merriweather-Regular.ttf) format('woff2');
+    src: url(./assets/fonts/Merriweather-Regular.ttf) format('truetype')
   }
 }
